--- a/index.html
+++ b/index.html
@@ -1,1 +1,50 @@
-<h1>Salut !</h1>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hamed Sylla - Développeur Front-end</title>
+    <style>
+        body { font-family: Arial, sans-serif; margin: 40px; background-color: #f9f9f9; color: #333; }
+        h1 { color: #2c3e50; }
+        nav a { margin-right: 20px; text-decoration: none; color: #2980b9; }
+        section { margin-top: 40px; }
+        .btn { display: inline-block; padding: 10px 20px; background-color: #2980b9; color: white; text-decoration: none; border-radius: 5px; }
+    </style>
+</head>
+<body>
+    <h1>Hamed Sylla - Développeur Front-end</h1>
+    
+    <nav>
+        <a href="#apropos">À propos</a>
+        <a href="#projets">Projets</a>
+        <a href="#cv">CV</a>
+        <a href="#contact">Contact</a>
+    </nav>
+
+    <section id="apropos">
+        <h2>À propos</h2>
+        <p>Je suis étudiant en BUT MMI, passionné par le développement web front-end. Je crée des sites modernes et fonctionnels, et je développe mes compétences en HTML, CSS et JavaScript. Mon objectif : devenir développeur front-end professionnel.</p>
+    </section>
+
+    <section id="projets">
+        <h2>Mes projets</h2>
+        <ul>
+            <li><a href="https://tonprojet1.github.io" target="_blank">Projet 1 : Mini site HTML/CSS</a></li>
+            <li><a href="https://tonprojet2.github.io" target="_blank">Projet 2 : Application météo (JavaScript)</a></li>
+            <li><a href="https://github.com/syllaah" target="_blank">Voir tous mes projets sur GitHub</a></li>
+        </ul>
+    </section>
+
+    <section id="cv">
+        <h2>Mon CV</h2>
+        <a href="CV_Hamed_Sylla.pdf" class="btn" download>Télécharger mon CV</a>
+    </section>
+
+    <section id="contact">
+        <h2>Contact</h2>
+        <p>Vous pouvez me contacter par email : <a href="mailto:hamed.sylla@example.com">hamed.sylla@example.com</a></p>
+    </section>
+</body>
+</html>
+
