--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
         <section id="accueil">
             <h2>Bienvenue</h2>
-            <p>Bienvenue sur mon portfolio. Je suis <strong>Hamed Sylla</strong>, étudiant en BUT MMI à l’IUT de [ton IUT] et futur développeur front-end. Je me spécialise dans la création d’interfaces web modernes, responsives et fonctionnelles. Passionné par le code et le design, je suis toujours en quête de nouveaux défis pour affiner mes compétences et contribuer à des projets innovants.</p>
+            <p>Bienvenue sur mon portfolio. Je suis <strong>Hamed Sylla</strong>, étudiant en BUT MMI à l’IUT 2 de Grenoble, et futur développeur front-end. Je me spécialise dans la création d’interfaces web modernes, responsives et fonctionnelles. Passionné par le code et le design, je suis toujours en quête de nouveaux défis pour affiner mes compétences et contribuer à des projets innovants.</p>
         </section>
 
         <section id="apropos">
