--- a/index.html
+++ b/index.html
@@ -101,19 +101,23 @@
             <p>Mon objectif est de rejoindre, à terme, une équipe de développement où je pourrai continuer à apprendre tout en contribuant à des projets ambitieux.</p>
         </section>
 
-        <section id="projets">
-            <h2>Mes projets</h2>
-            <ul>
-                <li>
-                    <a href="http://syllah.24.gremmi.fr/sae105/" target="_blank">
-                        Projet web : Site vitrine
-                    </a> – Création d’un site HTML/CSS pour présenter une entreprise fictive. Ce projet m’a permis d’appliquer mes compétences en développement front-end et de maîtriser les principes du design responsive.
-                </li>
-                <li>
-                    Projet DM : MonMiniSite – Développement d’une page HTML/CSS pour un devoir de première année. Ce projet m’a permis d’améliorer mes compétences en structuration HTML et en mise en page CSS. Disponible sur demande.
-                </li>
-            </ul>
-        </section>
+     <section id="projets">
+    <h2>Mes projets</h2>
+    <ul>
+        <li>
+            <a href="http://syllah.24.gremmi.fr/sae105/" target="_blank">
+                Projet web : Site vitrine
+            </a> – Création d’un site HTML/CSS pour présenter une entreprise fictive.
+            Ce projet m’a permis d’appliquer mes compétences en développement front-end et de maîtriser les principes du design responsive.
+        </li>
+        <li>
+            <a href="https://syllaah.github.io/MonMiniSite/" target="_blank">
+                Projet DM : MonMiniSite
+            </a> – Développement d’une page HTML/CSS pour un devoir de première année.
+            J’ai travaillé sur la structuration HTML et la mise en page CSS en respectant le responsive design.
+        </li>
+    </ul>
+</section>
 
         <section id="cv">
             <h2>Mon CV</h2>
